- updated properties, - implemented delete for timers
